--- a/Bio.html
+++ b/Bio.html
@@ -22,8 +22,8 @@
                     </div>
                 </div>
             
-                <div class=" col-lg-5 py-sm-5 pb-4  bounce-up ">
-                    <div class="content py-sm-5 pb-3 subject d-flex flex-column justify-content-end align-items-end">
+                <div class=" col-xl-5 py-sm-5 pb-4  bounce-up ">
+                    <div class="content py-sm-5 pb-3 subject d-flex flex-column justify-content-xl-end justify-content-center align-items-center align-items-xl-end ">
                         <div class="row m-0 p-0 position-relative">
                             <a class="color-peach d-flex align-items-center mt-sm-5 back_to_top_header"
                                 href="index.html">
@@ -82,10 +82,10 @@
                                 </a>
                             </div>
                         </div>
-                        <div class=" col-9 d-flex d-lg-none justify-content-end">
+                        <div class="col-12 col-md-6 col-xl-7 d-flex d-xl-none ">
                             <img src="./assets/images/bio/co-founder-1.png" class="w-100 " />
                         </div>
-                        <div class="px-sm-0 px-2 text-justify">
+                        <div class="px-sm-0 px-2 text-justify max_pra_content_one text-justify">
                             <p class="font-500 text-white letter-01 text_normal font-opacity mt-4">
                                 Milad is an experienced litigator and problem solver who has
                                 represented clients in a wide variety of forums from courts in
@@ -136,7 +136,7 @@
                         </div>
                     </div>
                 </div>
-                <div class=" col-10 col-lg-5 d-none d-lg-block">
+                <div class=" col-xl-5 d-none d-xl-block pe-0">
                     <img src="./assets/images/bio/co-founder-1.png" class="w-100 position-sticky top-0 end-0" />
                 </div>
             </div>
@@ -145,11 +145,11 @@
     <section class=" mt-4">
         <div class="container main-container p-0">
             <div class="row m-0 p-0 position-relative">
-                <div class="d-none d-xl-block col-xl-7">
+                <div class="d-none d-xl-block col-xl-6">
                     <img src="./assets/images/bio/co-founder-2.png" class="w-100 position-sticky top-0 end-0" />
                 </div>
-                <div class=" col-xl-5">
-                    <div class="content py-sm-5 pb-3 subject d-flex flex-column justify-content-center align-items-center">
+                <div class=" col-xl-6">
+                    <div class="content py-sm-5 pb-3 subject d-flex flex-column justify-content-center align-items-center justify-content-xl-start align-items-xl-start">
                         <div class="row m-0 p-0 position-relative">
                             <h2 class="letter-0-3 text-black mb-0 fw-bold mt-3 line-height-h2 fs_5xl">
                                 Cheryl<br />
@@ -157,7 +157,7 @@
 
                             </h2>
                             <h3 class="letter-0-3 text-black mb-0 fw-bold font-opacity mt-sm-4 mt-3 fs_2xl">
-                                Managing Partner &
+                                Managing Partner & <br/>
                                 Co-Founder
                             </h3>
                             <div class="d-flex my-4">
@@ -199,53 +199,36 @@
                     <div class="d-block d-xl-none col-12 col-md-8 col-xl-7">
                         <img src="./assets/images/bio/co-founder-2.png" class="w-100 " />
                     </div>
-                        <div class="px-sm-0 px-2 text-justify">
-                            <p class="font-500 text-black letter-01 text_normal font-opacity mt-4">
-                                Milad is an experienced litigator and problem solver who has
-                                represented clients in a wide variety of forums from courts in
-                                all five boroughs of New York City and in the Hudson Valley,
-                                to Federal and bankruptcy courts, the American Arbitration
-                                Association, the New York City Department of Buildings, local
-                                planning boards and community boards, the Equal Employment
-                                Opportunity Commission, the New York City Human Rights
-                                Commission, the IRS, and the New York State Appellate
-                                Divisions. Milad has handled several hundred cases from
-                                inception to trial—and on appeal—but has also devoted a
-                                significant portion of his practice to general counseling his
-                                clients and negotiating and managing pre-litigation disputes
-                                to help his clients achieve the most cost-effective and
-                                favorable results possible.
+                        <div class="px-sm-0 text-start max_pra_content_Two text-justify">
+                            <p class="font-500 text-black letter-01 fs_sm text_normal font-opacity mt-4">
+                            For over a decade, Cheryl has represented a wide variety of clients in transactional matters, from individuals and small
+                            businesses to domestic and multi-national billion-dollar companies, start-ups, tech companies, lenders, and real estate
+                            developers of all sizes. She has extensive corporate structuring experience and assists her clients at every stage of
+                            the process, on both the business and legal fronts. Cheryl has also served as general counsel to several New York City
+                            real estate developers, assisting them in identifying potential investments, obtaining lending (including finding
+                            creative financing solutions), reviewing and preparing all the necessary documents, and providing advice on an on-going
+                            basis. She prides herself on providing responsive, prompt, and real-time counseling throughout the deal process to bring
+                            each transaction to a successful close.
+
                             </p>
-                            <p class="font-500 text-black letter-01 font-opacity mt-4 text_normal">
-                                Unlike many litigators, Milad has practiced at the highest
-                                levels of a several different practice areas including matters
-                                involving real estate, construction, business/commercial
-                                matters, contract disputes, and high-exposure medical
-                                malpractice and tort matters. Milad has represented clients of
-                                all types from individuals and small businesses, to real
-                                estate developers, cooperative and condominiums, start-ups,
-                                multi-million-dollar companies, financial institutions,
-                                religious organizations, cultural and governmental
-                                organizations, regional hospitals, and physicians and medical
-                                practices
+                            <p class="font-500 text-black letter-01 fs_sm font-opacity mt-4 text_normal">
+                            Cheryl has worked and trained with top-tier transactional attorneys in New York City and has experience drafting and
+                            negotiating the simplest to most complex agreements, including contracts of sale, leases, joint venture agreements,
+                            partnership agreements, operating agreements, asset/stock/ membership interest purchase agreements, license agreements,
+                            employment agreements and private placement offerings. Cheryl has also closed commercial transactions all over the
+                            country and hundreds of residential transactions throughout the Hudson Valley and New York City metropolitan area,
+                            including single-family homes, co-operatives, and condominiums.
+
                             </p>
-                            <p class="font-500 text-black letter-01 font-opacity mt-4 text_normal">
-                                Milad has been selected as a Rising Star by Super Lawyers each
-                                year since 2019 (an honor given to less than 2.5% of attorneys
-                                in New York State) and has published several articles in
-                                publications such as the New York Law Journal and Mann Report.
-                                Prior to starting Boddoohi & Friedlander, Milad worked in the
-                                real estate and commercial litigation group of a highly
-                                respected New York City law firm, and before that, under
-                                several preeminent New York City medical malpractice trial
-                                attorneys and at a general litigation firm on Wall Street.
+                            <p class="font-500 text-black letter-01 fs_sm font-opacity mt-4 text_normal">
+                            Prior to starting Boddoohi & Friedlander, Cheryl worked at an elite New York City boutique transactional firm and before
+                            that, a local real estate firm in Rockland County. She is licensed to practice in New York.
+
                             </p>
-                            <p class="font-500 text-black letter-01 font-opacity mt-4 mb-5 text_normal">
-                                Milad received his law degree from the University of Miami
-                                School of Law in 2010 where he graduated with honors in
-                                litigation skills, and his undergraduate degree in political
-                                science from North Carolina State University in 2007, where he
-                                graduated magna cum laude.
+                            <p class="font-500 text-black letter-01 fs_sm font-opacity mt-4 mb-5 text_normal">
+                                Cheryl received her law degree from the University of Miami School of Law in 2010 and her undergraduate degree in
+                                financial accounting from North Carolina State University in 2007, graduating magna cum laude.
+
                             </p>
                         </div>
                     </div>
