--- a/Bio.html
+++ b/Bio.html
@@ -33,7 +33,7 @@
                                         d="M8.87057 4.5H50.9999V7.5H8.87057V12L-5.34058e-05 6L8.87057 0V4.5Z"
                                         fill="#FE6A5B" />
                                 </svg>
-                                <h5 class="font-uppercase letter-03 mb-0 ms-2 transition_03s color_red">
+                                <h5 class="font_uppercase letter-03 mb-0 ms-2 transition_03s color_red">
                                     Back to Home
                                 </h5>
                             </a>
@@ -136,13 +136,13 @@
                         </div>
                     </div>
                 </div>
-                <div class=" col-xl-5 d-none d-xl-block pe-0">
+                <div class=" col-xl-5 d-none d-xl-block pe-0 mt-sm-4">
                     <img src="./assets/images/bio/co-founder-1.png" class="w-100 position-sticky top-0 end-0" />
                 </div>
             </div>
         </div>
     </section>
-    <section class=" mt-4">
+    <section class=" mt-sm-5">
         <div class="container main-container p-0">
             <div class="row m-0 p-0 position-relative">
                 <div class="d-none d-xl-block col-xl-6">
