--- a/Bio.html
+++ b/Bio.html
@@ -25,6 +25,7 @@
                 <div class=" col-xl-5 py-sm-5 pb-4  bounce-up ">
                     <div class="content py-sm-5 pb-3 subject d-flex flex-column justify-content-xl-end justify-content-center align-items-center align-items-xl-end ">
                         <div class="row m-0 p-0 position-relative">
+                            <div class=" d-flex">
                             <a class="color-peach d-flex align-items-center mt-sm-5 back_to_top_header"
                                 href="index.html">
                                 <svg width="51" height="12" class="back" viewBox="0 0 51 12" fill="none"
@@ -33,10 +34,11 @@
                                         d="M8.87057 4.5H50.9999V7.5H8.87057V12L-5.34058e-05 6L8.87057 0V4.5Z"
                                         fill="#FE6A5B" />
                                 </svg>
-                                <h5 class="font_uppercase letter-03 mb-0 ms-2 transition_03s color_red">
+                                <h5 class="font_uppercase letter-03 mb-0 ms-2 transition_03s color_red line-height-h2 fs_sm">
                                     Back to Home
                                 </h5>
                             </a>
+                            </div>
                             <h2 class="letter-0-3 text-white mb-0 fw-normal mt-3 line-height-h2 fs_5xl">
                                 Milad<br />
                                 Boddoohi
@@ -136,19 +138,19 @@
                         </div>
                     </div>
                 </div>
-                <div class=" col-xl-5 d-none d-xl-block pe-0 mt-sm-4">
+                <div class=" col-xl-5 d-none d-xl-block p-0 mt-sm-4">
                     <img src="./assets/images/bio/co-founder-1.png" class="w-100 position-sticky top-0 end-0" />
                 </div>
             </div>
         </div>
     </section>
-    <section class=" mt-sm-5">
-        <div class="container main-container p-0">
-            <div class="row m-0 p-0 position-relative">
-                <div class="d-none d-xl-block col-xl-6">
+    <section class=" mt-sm-5 pe-lg-5">
+        <div class="container main-container p-sm-0">
+            <div class="row m-0 p-0 position-relative mt-sm-5 ">
+                <div class="d-none d-xl-block col-xl-6 p-0">
                     <img src="./assets/images/bio/co-founder-2.png" class="w-100 position-sticky top-0 end-0" />
                 </div>
-                <div class=" col-xl-6">
+                <div class="col-xl-6 py-sm-5 pb-3 order-1a animation-element bounce-up mw-576px in-view">
                     <div class="content py-sm-5 pb-3 subject d-flex flex-column justify-content-center align-items-center justify-content-xl-start align-items-xl-start">
                         <div class="row m-0 p-0 position-relative">
                             <h2 class="letter-0-3 text-black mb-0 fw-bold mt-3 line-height-h2 fs_5xl">
@@ -156,7 +158,7 @@
                                 Friedlander
 
                             </h2>
-                            <h3 class="letter-0-3 text-black mb-0 fw-bold font-opacity mt-sm-4 mt-3 fs_2xl">
+                            <h3 class="letter-0-3 text-black mb-0 fw-bold font-opacity mt-sm-4 mt-3 fs_2xl line-height-h2">
                                 Managing Partner & <br/>
                                 Co-Founder
                             </h3>
