--- a/Bio.html
+++ b/Bio.html
@@ -157,7 +157,7 @@
             </div>
         </div>
     </section>
-    <section class=" mt-sm-5">
+    <section id="Cheryl" class=" mt-sm-5">
         <div class="container main-container p-0">
             <div class="row m-0 p-0 position-relative justify-content-between">
                 <div class="d-none d-sm-block col-sm-7 col-lg-5">
