--- a/Bio.html
+++ b/Bio.html
@@ -66,15 +66,15 @@
                   <path class="transition_03s" d="M8.87057 4.5H50.9999V7.5H8.87057V12L-5.34058e-05 6L8.87057 0V4.5Z"
                     fill="#FE6A5B" />
                 </svg>
-                <h5 class="font_uppercase fs_sm letter-03 mb-0 ms-2 transition_03s color_red">
+                <h5 class="letter_03 text-uppercase transition_03 ms-2 mb-0 fs_sm fw-bold lh_100 color_bittersweet">
                   Back to Home
                 </h5>
               </a>
-              <h2 class="letter-0-3 text-white mb-0 fw-normal mt-3 line-height-h2 fs_5xl">
+              <h2 class="letter_0-3 text-white mb-0 fw-normal mt-3 line-height-h2 fs_5xl">
                 Milad<br />
                 Boddoohi
               </h2>
-              <h3 class="letter-0-3 text-white mb-0 fw-normal font-opacity mt-sm-4 mt-3 fs_2xl">
+              <h3 class="letter_0-3 text-white mb-0 fw-normal font-opacity mt-sm-4 mt-3 fs_2xl">
                 Partner & Co-Founder
               </h3>
               <div class="d-flex my-4">
