ui issues changes in index and bio html

--- a/Bio.html
+++ b/Bio.html
@@ -60,21 +60,21 @@
             class="content pb-sm-5 pt-md-5 pb-3 subject d-flex flex-column justify-content-xl-end justify-content-center align-items-center align-items-xl-end"
             data-aos="fade-up" data-aos-duration="1000">
             <div class="row m-0 p-sm-0 pt-5 position-relative">
-              <a class="color-peach d-flex align-items-center mt-sm-5 back_to_top_header" href="index.html">
+              <a class="color-peach d-flex align-items-center mt-sm-5 back_to_top_header p-0" href="index.html">
                 <svg width="51" height="12" class="back" viewBox="0 0 51 12" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path class="transition_03s" d="M8.87057 4.5H50.9999V7.5H8.87057V12L-5.34058e-05 6L8.87057 0V4.5Z"
                     fill="#FE6A5B" />
                 </svg>
-                <h5 class="letter_03 text-uppercase transition_03 ms-2 mb-0 fs_sm fw-bold lh_100 color_bittersweet">
+                <h5 class="letter_03 text-uppercase transition_03 ms-2 mb-0 fs_sm fw-bold lh_100 color_bittersweet ps-0">
                   Back to Home
                 </h5>
               </a>
-              <h2 class="letter_0-3 text-white mb-0 fw-normal mt-3 line-height-h2 fs_5xl">
+              <h2 class="letter_0-3 text-white mb-0 fw-normal mt-3 line-height-h2 fs_5xl ps-0">
                 Milad<br />
                 Boddoohi
               </h2>
-              <h3 class="letter_0-3 text-white mb-0 fw-normal font-opacity mt-sm-4 mt-3 fs_2xl">
+              <h3 class="letter_0-3 text-white mb-0 fw-normal font-opacity mt-sm-4 mt-3 fs_2xl px-0">
                 Partner & Co-Founder
               </h3>
               <div class="d-flex my-4">
@@ -190,15 +190,15 @@
             class="content py-sm-5 pb-3 subject d-flex flex-column justify-content-center align-items-center justify-content-xl-start align-items-xl-start"
             data-aos="fade-up" data-aos-duration="1000">
             <div class="row m-0 p-sm-0 pt-5 position-relative">
-              <h2 class="letter-0-3 text-black mb-0 fw-bold mt-3 line-height-h2 fs_5xl">
+              <h2 class="letter-0-3 text-black mb-0 fw-bold mt-3 line-height-h2 fs_5xl ps-0">
                 Cheryl<br />
                 Friedlander
               </h2>
-              <h3 class="letter-0-3 text-black mb-0 fw-bold font-opacity mt-sm-4 mt-3 fs_2xl">
+              <h3 class="letter-0-3 text-black mb-0 fw-bold font-opacity mt-sm-4 mt-3 fs_2xl ps-0">
                 Managing Partner & <br />
                 Co-Founder
               </h3>
-              <div class="d-flex my-4">
+              <div class="d-flex my-4 ps-0">
                 <a href="https://www.linkedin.com/in/miladboddoohi/" target="_blank">
                   <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <rect class="transition_03s" width="48" height="48" fill="#FE6A5B" />
