--- a/Bio.html
+++ b/Bio.html
@@ -64,13 +64,13 @@
             <a onclick="showNav()" href="index.html">Home</a>
           </li>
           <li>
-            <a onclick="showNav()" onclick="showNav()" href="#">Practice Areas</a>
+            <a onclick="showNav()" onclick="showNav()" href="/#practice">Practice Areas</a>
           </li>
           <li id="news">
             <a href="#" class="news_link">News</a>
           </li>
           <li>
-            <a onclick="showNav()" href="#">Team</a>
+            <a onclick="showNav()" href="/#milad">Team</a>
           </li>
           <li>
             <a onclick="showNav()" href="#contact">Contact</a>
@@ -383,7 +383,7 @@
   </div>
   <!-- footer section  -->
   <footer class="bg-black">
-    <div class="row position-relative max_w_1440" data-aos="fade-down" data-aos-duration="1000">
+    <div class="row position-relative max_w_1440 pt-3" data-aos="fade-down" data-aos-duration="1000">
       <div class="image_col p-sm-0">
         <img src="./assets/images/icons/footer-img.svg" alt="footer image"
           class="d-sm-block d-none pointer_event_none" />
@@ -423,12 +423,14 @@
           <div class="d-flex mt-2 item-center justify-content-center justify-content-md-start">
             <div
               class="d-flex flex-sm-row flex-column justify-content-center justify-content-sm-start align-items-center gap-sm-0 gap-2">
-              <a class="fs_sm fw-semibold text-white footer_links_hover transition_03" href="#">Back to Top</a>
-              <a href="#" class="ms-sm-5 fs_sm fw-semibold text-white footer_links_hover transition_03">Practice
+              <a class="fs_sm fw-semibold text-white footer_links_hover transition_03" href="#">Back to
+                Top</a>
+              <a href="#practice" class="ms-sm-5 fs_sm fw-semibold text-white footer_links_hover transition_03">Practice
                 Areas</a>
-              <a href="#" class="ms-sm-5 fs_sm fw-semibold text-white footer_links_hover transition_03">News</a>
-              <a href="#" class="ms-sm-5 fs_sm fw-semibold text-white footer_links_hover transition_03">Team</a>
-              <a href="#" class="ms-sm-5 fs_sm fw-semibold text-white footer_links_hover transition_03">Contact</a>
+              <a href="/news.html"
+                class="ms-sm-5 fs_sm fw-semibold text-white footer_links_hover transition_03">News</a>
+              <a href="#milad" class="ms-sm-5 fs_sm fw-semibold text-white footer_links_hover transition_03">Team</a>
+              <a href="#form" class="ms-sm-5 fs_sm fw-semibold text-white footer_links_hover transition_03">Contact</a>
             </div>
             <div class="social_icons_margin d-md-flex d-none mt-sm-0 mt-4">
               <a class="pe-3" href="https://www.facebook.com/thebflawfirm" target="_blank" rel="noopener noreferrer">
