--- a/Bio.html
+++ b/Bio.html
@@ -213,7 +213,7 @@
             class="content py-sm-5 pb-3 subject d-flex flex-column justify-content-center align-items-center justify-content-xl-start align-items-xl-start"
             data-aos="fade-up" data-aos-duration="1000">
             <div class="row m-0 p-sm-0 pt-5 position-relative">
-              <h2 class="letter-0-3 text-black mb-0 fw-bold mt-3 line-height-h2 fs_5xl ps-0">
+              <h2 class="letter-0-3 text-black mb-0 fw-bold mt-5 pt-lg-3 line-height-h2 fs_5xl ps-0">
                 Cheryl<br />
                 Friedlander
               </h2>
@@ -257,7 +257,7 @@
             <div class="d-block d-sm-none col-8 col-md-8 col-xl-7">
               <img src="./assets/images/bio/co-founder-2.png" class="w-100" />
             </div>
-            <div class="overflow-y-auto">
+            <div class="overflow-y-auto pe-lg-0 pe-2">
               <div class="px-sm-0 text-start max_pra_content_Two text-justify news_para_max_height">
                 <p class="font-500 text-black letter-01 fs_sm text_normal font-opacity mt-4">
                   For over a decade, Cheryl has represented a wide variety of
